--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Fitness Studio</string>
+    <string name="action_trainers">Trainers</string>
+    <string name="action_clubs">Clubs</string>
+    <string name="action_about_us">About us</string>
 </resources>
