--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,17 @@
     <string name="action_trainers">Trainers</string>
     <string name="action_clubs">Clubs</string>
     <string name="action_about_us">About us</string>
+    <string name="action_login">Log in</string>
+    <string name="action_booking">Booking</string>
+    <string name="action_shop">Shop</string>
     <string name="about_title">Hit us up</string>
     <string name="about_description">
         Don’t be shy. We’d love to hear from you and how we can enhance your 1R experience\\n
         even further. Choose from the options below and we\'ll do our best to help.\\n
         Feel free to also drop by the studios and chat with our team (gifts accepted).
     </string>
+    <string name="sign_in">Sign in</string>
+    <string name="enter_email">Enter email or login</string>
+    <string name="enter_password">Enter password</string>
+    <string name="sign_up_offer">Or you can sign up</string>
 </resources>
