Add splash activity and app icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="enter_email">Enter email or login</string>
     <string name="enter_password">Enter password</string>
     <string name="sign_up_offer">Don\'t have an account?</string>
-    <string name="sign_up_offer_link">Register now</string>
+    <string name="sign_in_offer">Already have an account?</string>
+    <string name="register">Register</string>
 
 </resources>
