--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="action_shop">Shop</string>
     <string name="about_title">Hit us up</string>
     <string name="about_description">
-        Don’t be shy. We’d love to hear from you and how we can enhance your 1R experience\\n
-        even further. Choose from the options below and we\'ll do our best to help.\\n
+        Don’t be shy. We’d love to hear from you and how we can enhance your 1R experience
+        even further. Choose from the options below and we\'ll do our best to help.
         Feel free to also drop by the studios and chat with our team (gifts accepted).
     </string>
     <string name="sign_in">Sign in</string>
