--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="error_msg_mismatch_passwords">Password and confirm password does not match</string>
     <string name="error_msg_agree_terms_condition">Please agree Terms and Condition</string>
     <string name="register_successful">Successful! Thanks for registering!</string>
+    <string name="sign_in_successful">Welcome Back!</string>
     <string name="user_id">User ID ::</string>
     <string name="email_id">Email ID ::</string>
 
