--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,6 @@
     <string name="user_id">User ID ::</string>
     <string name="email_id">Email ID ::</string>
 
+    <string name="please_wait">Please wait...</string>
 
 </resources>
