--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="forgot_password_description">We\'ll send you an email to reset your password</string>
 
     <string name="button_submit">SUBMIT</string>
+    <string name="reset_password_successfully">Check your email</string>
 </resources>
