--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
 
     <string name="button_submit">SUBMIT</string>
     <string name="reset_password_successfully">Check your email</string>
+    <string name="error_registration">Error while registration the user</string>
 </resources>
